# qtcreator-plugin-stringmanipulation

./: CMakeLists.txt  README.md  StringManipulation.json  StringManipulation.json.in  stringmanipulation.cpp  stringmanipulation.h  stringmanipulation.pro  stringmanipulation_global.h  stringmanipulationconstants.h  stringmanipulationcore.cpp  stringmanipulationcore.h
src/: src.pri  stringmanipulation_global.hpp  stringmanipulationconstants.hpp  stringmanipulationcore.cpp  stringmanipulationcore.hpp  stringmanipulationplugin.cpp  stringmanipulationplugin.hpp
